feat: redesign lexobot chat

--- a/frontend-chat/src/app/globals.css
+++ b/frontend-chat/src/app/globals.css
@@ -43,3 +43,15 @@ body {
     height: -webkit-fill-available;
   }
 }
+
+@media (max-width: 767px) {
+  .mobile-only-bg {
+    background-attachment: fixed !important;
+  }
+}
+
+@media (min-width: 768px) {
+  .mobile-only-bg {
+    background-image: none !important;
+  }
+}
